errors.txt
/home/alex/expCmake/inc/depends/depend.h:2:20: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include "depend.h"
      |                    ^
/home/alex/expCmake/inc/depends/depend.h:3:20: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    3 | #include <iostream>
      |                    ^
In file included from /home/alex/expCmake/inc/depends/depend.h:3:
/usr/include/c++/12/iostream:38:28: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
   38 | #include <bits/c++config.h>
      |                            ^
/usr/include/c++/12/iostream:39:19: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
   39 | #include <ostream>
      |                   ^
/usr/include/c++/12/iostream:40:19: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
   40 | #include <istream>
      |                   ^
/usr/include/c++/12/iostream:42:15: error: expected ‘{’ before ‘_GLIBCXX_VISIBILITY’
   42 | namespace std _GLIBCXX_VISIBILITY(default)
      |               ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/iostream:42:34: error: expected constructor, destructor, or type conversion before ‘(’ token
   42 | namespace std _GLIBCXX_VISIBILITY(default)
      |                                  ^
/home/alex/expCmake/src/depends/depends.cpp:3:1: error: ISO C++ forbids declaration of ‘printDepend’ with no type [-fpermissive]
    3 | printDepend(){
      | ^~~~~~~~~~~
/home/alex/expCmake/src/depends/depends.cpp:3:1: error: ambiguating new declaration of ‘int printDepend()’
/home/alex/expCmake/inc/depends/depend.h:4:6: note: old declaration ‘void printDepend()’
    4 | void printDepend();
      |      ^~~~~~~~~~~
/home/alex/expCmake/src/depends/depends.cpp: In function ‘int printDepend()’:
/home/alex/expCmake/src/depends/depends.cpp:4:10: error: ‘cout’ is not a member of ‘std’
    4 |     std::cout<<"Depend header\n";
      |          ^~~~
/home/alex/expCmake/src/depends/depends.cpp:2:1: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
    1 | #include "depend.h"
  +++ |+#include <iostream>
    2 |
/home/alex/expCmake/src/depends/depends.cpp:5:1: warning: no return statement in function returning non-void [-Wreturn-type]
    5 | }
      | ^
make[2]: *** [CMakeFiles/expCmake.dir/build.make:76: CMakeFiles/expCmake.dir/src/depends/depends.cpp.o] Ошибка 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/expCmake.dir/all] Ошибка 2
make: *** [Makefile:91: all] Ошибка 2
